# RAG-from-a-bio-student

./: .gitignore  CLAUDE.md  README.md  indexer_flow.txt  indexer_learn.py  main.py  pyproject.toml  run_server.py  test_model.py
data/: cell_biology.txt  chat_history.json  example.md  molecular_biology.txt  开题报告.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  api.js  main.js
frontend/src/views/: ChatView.vue  FilesView.vue  HistoryView.vue  SettingsView.vue  StatsView.vue
src/: api.py  config.py  embed.py  generator.py  indexer.py  loader.py  reranker.py  retriever.py
