[project]
name = "biograph"
version = "0.1.0"
description = "biograph-个性化知识库"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "FlagEmbedding>=1.2.0",
    "chromadb>=0.4.0",
    "python-docx>=1.1.0",
    "PyMuPDF>=1.24.0",
    "transformers>=4.45,<5",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "markdown>=3.7",
    "beautifulsoup4>=4.12.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "torchaudio>=2.11.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
